2017-08-24 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'ArchiveDirectory=' directive to the [System<n>] sections
	of aman.conf(5).
2017-08-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.17.
2018-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in amand(8) that caused the service to abort at
	startup if local MySQL instance was not yet started.
2018-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.18.
2019-12-17 Fred Gleason <fredg@paravelsystems.com>
	* Removed all CVS-style 'Id$' macros.
2019-12-17 Fred Gleason <fredg@paravelsystems.com>
	* Renamed all classes in the convenience library to begin with
	'AM'.
2020-07-31 Fred Gleason <fredg@paravelsystems.com>
	* Updated the example configuration to use ed25519 keys for ssh(1).
2021-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Ported package to Qt5.
	* Changed the startup system to Systemd.
2021-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Added code to purge stale host entries to in
	'scripts/aman_add_replication_users.pl'.
2022-03-03 Fred Gleason <fredg@paravelsystems.com>
	* Removed support for RHEL6.
2022-03-03 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'StatusLight' class to 'AMStatusLight'.
	* Moved the 'Connection' class to 'AMConnctionClass'.
2022-03-04 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out amanrmt(1) client.
2022-03-07 Fred Gleason <fredg@paravelsystems.com>
	* Got DB replication working in amanrmt(1).
2022-03-07 Fred Gleason <fredg@paravelsystems.com>
	* Got audio replication working in amanrmt(1).
2022-03-07 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'aman-remote' RPM subpackage.
2022-03-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.18rmt0.
2022-03-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in amand(8) that could cause the ping tables to be
	created with the incorrect table engine type.