@@ -2,7 +2,7 @@
 //
 // Generate a MySQL Snapshot
 //
-//   (C) Copyright 2012-2021 Fred Gleason <fredg@paravelsystems.com>
+//   (C) Copyright 2012-2022 Fred Gleason <fredg@paravelsystems.com>
 //
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License version 2 as
@@ -54,6 +54,12 @@ bool MainObject::GenerateMysqlSnapshot(const QString &filename)
     if(!OpenMysql(Am::This,addr)) {
       return false;
     }
+  }
+
+  if(!CheckTableEngines("MyISAM")) {
+    syslog(LOG_WARNING,"unable to generate snapshot");
+    CloseMysql();
+    return false;
   }
 
   //
